fixing spacing on single post pages for logo/branding.

--- a/themes/independent-publisher-child-theme/style.css
+++ b/themes/independent-publisher-child-theme/style.css
@@ -66,6 +66,7 @@ and Blueprint http://www.blueprintcss.org/
 		width: 100%;
 		max-width: 700px;
 		margin:5px auto 0 auto;
+		line-height: 0;
 	}
 	#logoOnPostPages h1.site-title, #logoOnPostPages a.site-logo{
 		display: inline-block;
